--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
       <div class="card p-3 py-4">
         <div class="text-center">
           <img
-            src="https://scontent-hkg1-1.xx.fbcdn.net/v/t39.30808-1/428604449_919341093173005_175439117143595983_n.jpg?stp=dst-jpg_s200x200&_nc_cat=101&ccb=1-7&_nc_sid=0ecb9b&_nc_ohc=SJMwm__cFNYQ7kNvgHD5Rij&_nc_ht=scontent-hkg1-1.xx&_nc_gid=AOvO1TTNnMWjf407e0ieZDU&oh=00_AYCGZKgvHSqM-v0OOT62qpI4jXcZhur3t6oLg6x6QmGZvg&oe=66EEFB32"
+            src="https://i.ibb.co/wWwPkmq/428604449-919341093173005-175439117143595983-n.jpg"
             width="100"
             class="rounded-circle"
           />
